@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-06-16 Jochen
+ PATCH: [ 1734439 ] Fix Bug #1723263 "Zip --> Both" operation give unwanted content in output
+  Src: 7zCommon.cpp
+
 2007-06-13 Kimmo
  PATCH: [ 1736520 ] WinMerge Large Toolbar Icons - small update
   Submitted by Alexander Skinner
